# sqs-webhook-relay

./: .gitignore  Cargo.toml  README.md
src/: main.rs
terraform/: main.tf  outputs.tf  variables.tf
