[package]
name = "sqs-webhook-relay"
version = "0.1.1"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-sqs = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
colored = "2.1"
serde_json = "1.0"
base64 = "0.22.1"
